# cmake-external

./: .gitignore  README.md  build-clang.sh  build-gcc.sh  build-vs2015.cmd  build-xlc.sh
src/: CMakeLists.txt
src/depends/: depends.txt
src/mightyconfig/: mighty-config.h.in
src/mightylib/: CMakeLists.txt  mighty-lib.cpp  mighty-lib.hpp
src/mightyutil/: CMakeLists.txt  mighty-util.cpp
